--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "1deab5ed-88e0-4b0c-bde9-6a7b17645c44"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
